[gd_scene load_steps=3 format=3]

[ext_resource path="res://scripts/LevelUpUI.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Action_panel.png" type="Texture2D" id=2]

[node name="LevelUpUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -200.0
offset_right = 260.0
offset_bottom = 200.0
texture = ExtResource("2")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Choose an Upgrade"

[node name="Option1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Option 2"

[node name="Option3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Option 3"
